--- a/src/dontbreaktheice.tex
+++ b/src/dontbreaktheice.tex
@@ -51,6 +51,9 @@ const HIDDEN = 0;
 const R_REVEAL = 1;
 const W_REVEAL = -1;
 
+const M = 0;
+const N = 1;
+
 % Globals
 % Animation interval variable
 var run;
@@ -93,12 +96,12 @@ function getRandomInt(max) {
  * Initialize the default game state.
  */
 function initialize() {
-    for (var row = 0; row < BOARD_HEIGHT; row++) {
-        var tmp = new Array();
-        for (var column = 0; column < BOARD_WIDTH; column++) {
-            tmp.push(EMPTY);
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        var row = new Array();
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            row.push(EMPTY);
         }
-        complBoard.push(tmp);
+        complBoard.push(row);
     }
 
     printInfoText("Select cells and find a way across.");
@@ -121,10 +124,10 @@ function initializeButtons() {
     this.getField("restart").setAction("MouseUp", "restart();");
 
     var funcName = "revealCell";
-    for (var x = 0; x < BOARD_WIDTH; x++) {
-        for (var y = 0; y < BOARD_HEIGHT; y++) {
-            var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            var callbackName = funcName + "(" + m.toString() + "," + n.toString() + ");";
+            this.getField("cell" + m + "-" + n).setAction("MouseDown", callbackName);
         }
     }
 
@@ -144,11 +147,11 @@ function restart() {
 
     % Clear complBoard and redraw
     var cell;
-    for (var x = 0; x < BOARD_WIDTH; x++) {
-        for (var y = 0; y < BOARD_HEIGHT; y++) {
-            complBoard[y][x] = EMPTY;
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            complBoard[m][n] = EMPTY;
 
-            cell = this.getField("pos" + x + "-" + y);
+            cell = this.getField("cell" + m + "-" + n);
             cell.delay = true;
             cell.borderColor = color.white;
             cell.fillColor = color.white;
@@ -157,9 +160,9 @@ function restart() {
     }
 
     % Reset board for other use
-    for (var x = 0; x < BOARD_WIDTH; x++) {
-        for (var y = 0; y < BOARD_HEIGHT; y++) {
-            complBoard[y][x] = EMPTY;
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            complBoard[m][n] = EMPTY;
         }
     }
 
@@ -218,23 +221,23 @@ function tooltip(on) {
 function createPath() {
     freePath = new Array();
 
-    var startX = getRandomInt(BOARD_WIDTH);
-    var endX = getRandomInt(BOARD_WIDTH);
+    var startN = getRandomInt(BOARD_WIDTH);
+    var endN = getRandomInt(BOARD_WIDTH);
 
     % Mark bottom and top row as not select able
-    for (var ix = 0; ix < BOARD_WIDTH; ix++) {
-        complBoard[0][ix] = FORBIDDEN;
-        complBoard[BOARD_HEIGHT - 1][ix] = FORBIDDEN;
+    for (var n = 0; n < BOARD_WIDTH; n++) {
+        complBoard[0][n] = FORBIDDEN;
+        complBoard[BOARD_HEIGHT - 1][n] = FORBIDDEN;
     }
 
     % Create a list of all potential cells
     var cellList = [];
-    for (var i = 0; i < BOARD_WIDTH; i++) {
-        for (var j = 1; j < BOARD_HEIGHT - 1; j++) {
-            cellList.push([i, j]);
+    for (var m = 1; m < BOARD_HEIGHT - 1; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            cellList.push([m, n]);
         }
     }
-    cellList.push([startX, BOARD_HEIGHT - 1]);
+    cellList.push([BOARD_HEIGHT - 1, startN]);
 
     % Loop as long as there are entries in the list
     while (cellList.length !== 0) {
@@ -249,17 +252,17 @@ function createPath() {
         complBoard[elem[1]][elem[0]] = FORBIDDEN;
         % If there is no path available after marking this cell,
         % the cell is needed for the path
-        if (!doesPathExist([startX, BOARD_HEIGHT - 1], [endX, 0], complBoard)) {
+        if (!doesPathExist([startN, BOARD_HEIGHT - 1], [endN, 0], complBoard)) {
             complBoard[elem[1]][elem[0]] = EMPTY;
         }
     }
 
-    freePath = getPath([startX, BOARD_HEIGHT - 1], [endX, 0], complBoard);
+    freePath = getPath([startN, BOARD_HEIGHT - 1], [endN, 0], complBoard);
 
     % Reset board for other use
-    for (var x = 0; x < BOARD_WIDTH; x++) {
-        for (var y = 0; y < BOARD_HEIGHT; y++) {
-            complBoard[y][x] = EMPTY;
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            complBoard[m][n] = EMPTY;
         }
     }
 
@@ -285,33 +288,33 @@ function createPath() {
 function getPath(start, end, board) {
     var pathList = [start];
     % While the target is not reached search neighborhood
-    while (pathList[pathList.length - 1][0] !== end[0] ||
-        pathList[pathList.length - 1][1] !== end[1]
+    while (pathList[pathList.length - 1][M] !== end[M] ||
+        pathList[pathList.length - 1][N] !== end[N]
     ) {
         var elem = pathList[pathList.length - 1];
-    	board[elem[1]][elem[0]] = IS_PATH;
+    	board[elem[M]][elem[N]] = IS_PATH;
 
         % Push next piece
-        var xpo = elem[0] + 1;
-        var xmo = elem[0] - 1;
-        var ypo = elem[1] + 1;
-        var ymo = elem[1] - 1;
+        var mAdd = elem[M] + 1;
+        var mSub = elem[M] - 1;
+        var nAdd = elem[N] + 1;
+        var nSub = elem[N] - 1;
 
         var added = false;
-       	if (ypo < BOARD_HEIGHT && board[ypo][elem[0]] == REACHABLE) {
-        	pathList.push([elem[0], ypo]);
+       	if (mAdd < BOARD_HEIGHT && board[mAdd][elem[N]] == REACHABLE) {
+        	pathList.push([mAdd, elem[N]]);
         	added = true;
         }
-        if (ymo >= 0 && board[ymo][elem[0]] == REACHABLE) {
-        	pathList.push([elem[0], ymo]);
+        if (mSub >= 0 && board[mSub][elem[N]] == REACHABLE) {
+        	pathList.push([mSub, elem[N]]);
         	added = true;
         }
-        if (xpo < BOARD_WIDTH && board[elem[1]][xpo] == REACHABLE) {
-        	pathList.push([xpo, elem[1]]);
+        if (nAdd < BOARD_WIDTH && board[elem[M]][nAdd] == REACHABLE) {
+        	pathList.push([elem[M], nAdd]);
         	added = true;
         }
-        if (xmo >= 0 && board[elem[1]][xmo] == REACHABLE) {
-        	pathList.push([xmo, elem[1]]);
+        if (nSub >= 0 && board[elem[M]][nSub] == REACHABLE) {
+        	pathList.push([elem[M], nSub]);
         	added = true;
         }
 
@@ -340,10 +343,10 @@ function getPath(start, end, board) {
 function doesPathExist(start, end, board) {
 	% Cleanup: Ensure that there is no leftover data
 	% that could come from earlier calls of this method
-    for (var x = 0; x < BOARD_WIDTH; x++) {
-        for (var y = 0; y < BOARD_HEIGHT; y++) {
-            if (board[y][x] > EMPTY) {
-                board[y][x] = EMPTY;
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            if (board[m][n] > EMPTY) {
+                board[m][n] = EMPTY;
             }
         }
     }
@@ -351,42 +354,42 @@ function doesPathExist(start, end, board) {
     % Starting from the goal mark all cells to indicate
     % whether they can reach it
     var toMarkList = [end];
-    board[end[1]][end[0]] = REACHABLE;
-    board[start[1]][start[0]] = EMPTY;
+    board[end[M]][end[N]] = REACHABLE;
+    board[start[M]][start[N]] = EMPTY;
 
     while (toMarkList.length !== 0) {
   	    var elem = toMarkList.pop();
 
-        % Push neighbours if not marked
-        var xpo = elem[0] + 1;
-        var xmo = elem[0] - 1;
-        var ypo = elem[1] + 1;
-        var ymo = elem[1] - 1;
+        % Push neighbors if not marked
+        var mAdd = elem[M] + 1;
+        var mSub = elem[M] - 1;
+        var nAdd = elem[N] + 1;
+        var nSub = elem[N] - 1;
 
-       	if (ypo < BOARD_HEIGHT && board[ypo][elem[0]] == EMPTY) {
-        	toMarkList.push([elem[0], ypo]);
+       	if (mAdd < BOARD_HEIGHT && board[mAdd][elem[N]] == EMPTY) {
+        	toMarkList.push([mAdd, elem[N]]);
             % Mark the cell
-            board[ypo][elem[0]] = REACHABLE;
+            board[mAdd][elem[N]] = REACHABLE;
         }
-        if (ymo >= 0 && board[ymo][elem[0]] == EMPTY) {
-        	toMarkList.push([elem[0], ymo]);
+        if (mSub >= 0 && board[mSub][elem[N]] == EMPTY) {
+        	toMarkList.push([mSub, elem[N]]);
             % Mark the cell
-            board[ymo][elem[0]] = REACHABLE;
+            board[mSub][elem[N]] = REACHABLE;
         }
-        if (xpo < BOARD_WIDTH && board[elem[1]][xpo] == EMPTY) {
-        	toMarkList.push([xpo, elem[1]]);
+        if (nAdd < BOARD_WIDTH && board[elem[M]][nAdd] == EMPTY) {
+        	toMarkList.push([elem[M], nAdd]);
             % Mark the cell
-            board[elem[1]][xpo] = REACHABLE;
+            board[elem[M]][nAdd] = REACHABLE;
         }
-        if (xmo >= 0 && board[elem[1]][xmo] == EMPTY) {
-        	toMarkList.push([xmo, elem[1]]);
+        if (nSub >= 0 && board[elem[M]][nSub] == EMPTY) {
+        	toMarkList.push([elem[M], nSub]);
             % Mark the cell
-            board[elem[1]][xmo] = REACHABLE;
+            board[elem[M]][nSub] = REACHABLE;
         }
     }
 
 	% Check the start cell if it is marked as reachable
-    return board[start[1]][start[0]] == REACHABLE;
+    return board[start[M]][start[N]] == REACHABLE;
 }
 
 %%%%%%%%%%%%%
@@ -395,35 +398,35 @@ function doesPathExist(start, end, board) {
 /**
  * Reveal the selected cell and update the visuals accordingly.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function revealCell(x, y) {
+function revealCell(m, n) {
     if (gameover || !play) {
         return;
     }
 
     % Is the cell a neighbor of the current or first line
     if (currentBoard == -1) {
-        if (y != BOARD_HEIGHT -1) {
+        if (m != BOARD_HEIGHT -1) {
             return;
         }
     } else {
-        var diffX = Math.abs(freePath[currentBoard][0] - x);
-        var diffY = Math.abs(freePath[currentBoard][1] - y);
-        if (diffX + diffY != 1) {
+        var diffM = Math.abs(freePath[currentBoard][M] - m);
+        var diffN = Math.abs(freePath[currentBoard][N] - n);
+        if (diffM + diffN != 1) {
             return;
         }
     }
 
     % Test if the selected cell is on the path
     var hit = false;
-    if (freePath[currentBoard + 1][0] == x && freePath[currentBoard + 1][1] == y) {
-        complBoard[y][x] = R_REVEAL;
+    if (freePath[currentBoard + 1][M] == m && freePath[currentBoard + 1][N] == n) {
+        complBoard[m][n] = R_REVEAL;
         hit = true;
         % Unmark the last neighborhood
         if (currentBoard != -1) {
-            markNeighbors(freePath[currentBoard][0], freePath[currentBoard][1], false);
+            markNeighbors(freePath[currentBoard][M], freePath[currentBoard][N], false);
         }
         % Move to next cell
         currentBoard++;
@@ -432,7 +435,7 @@ function revealCell(x, y) {
             printInfoText("Congratulations you found a way across!");
         }
         % Mark the neighboring cells that are accessible
-        markNeighbors(x, y, true);
+        markNeighbors(m, n, true);
     }
 
     % If nothing was hit the game is over
@@ -440,13 +443,13 @@ function revealCell(x, y) {
     if (!hit) {
         gameover = true;
         for (var idx = 0; idx < freePath.length; idx++) {
-            complBoard[freePath[idx][1]][freePath[idx][0]] = 1;
+            complBoard[freePath[idx][M]][freePath[idx][N]] = 1;
         }
-        complBoard[y][x] = -1;
+        complBoard[m][n] = -1;
         printInfoText("Sadly you died!");
     }
 
-    draw(x, y);
+    draw(m, n);
 }
 
 %%%%%%%%%%%%%%%%%%%%%
@@ -456,9 +459,9 @@ function revealCell(x, y) {
  * Draw all cells.
  */
 function drawAll() {
-    for (var x = 0; x < BOARD_WIDTH; x++) {
-        for (var y = 0; y < BOARD_HEIGHT; y++) {
-            draw(x, y);
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            draw(m, n);
         }
     }
 }
@@ -467,13 +470,13 @@ function drawAll() {
  * Since only one cell is updated with each input,
  * only this cell needs to be redrawn.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function draw(x, y) {
-    var cell = this.getField("pos" + x + "-" + y);
+function draw(m, n) {
+    var cell = this.getField("cell" + m + "-" + n);
     cell.delay = true;
-    var value = complBoard[y][x];
+    var value = complBoard[m][n];
     % If the cell was correctly revealed
     if (value > HIDDEN) {
         cell.fillColor = COLORS[1];
@@ -502,15 +505,15 @@ function drawPath() {
     if (drawPiece >= freePath.length) {
         drawPiece = 0;
         for (var idx = 0; idx < freePath.length; idx++) {
-            complBoard[freePath[idx][1]][freePath[idx][0]] = HIDDEN;
-            draw(freePath[idx][0], freePath[idx][1]);
+            complBoard[freePath[idx][M]][freePath[idx][N]] = HIDDEN;
+            draw(freePath[idx][M], freePath[idx][N]);
         }
         play = true;
         app.clearInterval(run);
     } else {
         % Redraw and continue
-        complBoard[freePath[drawPiece][1]][freePath[drawPiece][0]] = R_REVEAL;
-        draw(freePath[drawPiece][0], freePath[drawPiece][1]);
+        complBoard[freePath[drawPiece][M]][freePath[drawPiece][N]] = R_REVEAL;
+        draw(freePath[drawPiece][M], freePath[drawPiece][N]);
 
         drawPiece++;
     }
@@ -519,23 +522,23 @@ function drawPath() {
 /**
  * Highlight the neighboring cells of the given position.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function markNeighbors(x, y, mark) {
+function markNeighbors(m, n, mark) {
     % Define the neighborhood
     var directions = [[-1, 0], [1, 0], [0, 1], [0, -1]]
 
     for (var idx = 0; idx < directions.length; idx++) {
-        var newX = x + directions[idx][0];
-        var newY = y + directions[idx][1];
+        var newM = m + directions[idx][M];
+        var newN = n + directions[idx][N];
 
         % Check for out of bounds
-        if (newX < 0 || newX >= BOARD_WIDTH || newY < 0 || newY >= BOARD_HEIGHT) {
+        if (newM < 0 || newM >= BOARD_HEIGHT || newN < 0 || newN >= BOARD_WIDTH) {
             continue;
         }
 
-        var cell = this.getField("pos" + newX + "-" + newY);
+        var cell = this.getField("cell" + newM + "-" + newN);
         cell.delay = true;
         if (mark) {
             cell.borderColor = COLORS[2];
@@ -603,10 +606,10 @@ function printInfoText(text) {
                 \tiny
                 \includegraphics[width=0.25\textwidth]{end}\\[2pt]
                 %
-                \xintFor* #2 in {\xintSeq{0}{\boardHeight-1}} \do {%
-                    \xintFor* #1 in {\xintSeq{0}{\boardWidth-1}} \do {%
+                \xintFor* #1 in {\xintSeq{0}{\boardHeight-1}} \do {%
+                    \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
                         \TextField[
-                            name=pos#1-#2, width=\cellsize, height=\cellsize,%
+                            name=cell#1-#2, width=\cellsize, height=\cellsize,%
                             bordercolor=white, readonly%
                         ]{}%
                         \xintifForLast{}{\hspace{3pt}}%
